# Argus_Scanner

./: .dockerignore  .env.example  .gitattributes  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
adjudicator/: agent.py  config.py  opus_adapter.py  prompts.py
analysis/: ensemble.py
api-keys/: index.html
architecture/: index.html
bench_results/v1_1_launch/: launch_report.md
contributing/: index.html
cost-guide/: index.html
dashboard/: __init__.py  cli.py  docker-compose.yml  persistence.py
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/server/: __init__.py  api.py  app.py  db.py  models.py  schemas.py  summaries.py
dast/: MULTI_IMAGE_DESIGN.md  adversarial_loop.py  adversarial_loop_runner.py  behavioral_probe.py  code_graph.py  coverage_tracker.py  cross_repo_query.py  cross_repo_retrieval.py  cross_validation.py  cwe_probe_registry.py  discovery.py  downstream_cap.py  inference.py  infra_telemetry.py  journal.py  ml_detonation.py  orchestrator.py  per_finding.py  phase_c_multi_file.py  phase_c_verify_gates.py  probe_mutator.py  prompts.py  remediation_verify.py  runner.py  runtime_probe.py  sink_observation.py  syscall_observability.py  validator.py  variant_analysis.py  variant_runner.py  verdict_resolver.py
dast-setup/: index.html
dast/code_index/: __init__.py  github_search.py
dast/sandbox/: client.py  gvisor.py  multi_image_wiring.py
docs/: api-keys.md  architecture.md  contributing.md  cost-guide.md  dashboard.md  dast-setup.md  dast_301_variant_analysis.md  dast_303_cross_repo_design.md  index.md  install.md  jsdast-plan.md  mcp.md  sandbox-observability-plan-option-b.md  sandbox-observability-plan.md  scan_010_split_l1_design.md  scan_011_attack_class_hunters_design.md
inference/: adapters.py
install/: index.html
mcp_scanner/: __init__.py  classifier.py  cli.py  client.py  findings.py  oob_listener.py  report.py  sandbox_launcher.py  sandbox_probe_harness.py  surface.py
mcp_scanner/probes/: __init__.py  auth_bypass.py  base.py  fail_open.py  redirect.py  ssrf.py
mcp_scanner/transport/: __init__.py  base.py  http.py  stdio.py
methodology/: CAMPAIGN_NOTES.md  baseline_runner.py  bench.py  build_consensus.py  dast_replay.py  diff_report.py  finding_adjudicator.py  judge.py  launch_report.py  oracle_builder.py  per_fix_runner.py  phase_3_proof_analyzer.py  phase_3_thin_slice.py  run_argus_bench.py  run_phase_a_report.py  run_voter_pass.py  score_rich.py  scoring.py  voters.py
preprocessing/: CLAUDE.md  TASKS.md  __init__.py  ai_file_patterns.py  attack_vector_extensions.py  binary_detect.py  crypto_sensitivity.py  deobfuscation.py  deobfuscation_js.py  framework_markers.py  github_actions.py  imperative_install.py  imports.py  js_imports.py  language.py  malware_hash.py  ml_model.py  notebook.py  pipeline.py  prompt_injection.py  prompt_markers.py  sibling_files.py
preprocessing/parsers/: __init__.py  _base.py  crates.py  go.py  maven.py  npm.py  nuget.py  pypi.py  rubygems.py
preprocessing/tests/: test_ai_file_patterns.py  test_attack_vector_extensions.py  test_binary_detect.py  test_crypto_sensitivity.py  test_deobfuscation.py  test_deobfuscation_js.py  test_framework_markers.py  test_imperative_install.py  test_language.py  test_parsers.py  test_pipeline.py  test_prompt_injection.py  test_prompt_markers.py
prompts/: scanner.py
prompts/advisories/: PHASE_3B_DESIGN.md  phase_3b_draft.py
samples/: arg001_smoke_malicious.py  v1_9_dast_e2e_verification.py
samples/extras/: 04_colourama_setup.py  07_CLAUDE.md  08_plugin.json  10_kernel_module_build.py  attack_c__citrix_recording_audit_checker.py  attack_c__ios_xe_audit_checker.py  attack_c__k8s_telemetry_init.py  attack_c__storage_link_audit.py  attack_c__streaming_service_audit.py  attack_c__win_gfx_patch_checker.py  benchmark_v1_augmented_manifest.md  eval_benchmark_v1_ground_truth_augmented_final.json  malware__12_dependency_telemetry_hook.py  malware__build.gradle  malware__fibaro-proxy-widget.js  supply_c__telemetry_init.py  supply_c__vscode_telemetry_extension.py  vulnerab__data-export-workflow.js
samples/regression_v1/: 12_gh_bot_automerge_backdoor.py  12_glpi_sso_session_fixation.py  audit_log_compression.py  backup_manager.py  clean.py  compat_hooks.pth  consistency_variable.py  db2_query_health_check.py  docker_entrypoint_init.py  event_stream_flatmap_compromise.js  high_stakes_crypto.py  high_with_vuln.py  init__.py  known_malware.py  litellm_obfuscated.py  load_distributed_checkpoint.py  low.py  megatron_gpt2_loader.py  multi_layer_b64.py  notebook_clean.ipynb  notebook_pip_malicious.ipynb  oracle.json  perceiver_model_loader.py  photoshow_ffmpeg_config.py  preinstall.py  regression_baseline.json  runtime_probe_chain_eval.py  runtime_probe_js_path_traversal.js  runtime_probe_path_traversal.py  runtime_probe_shell_path_traversal.sh  sandbox_runner.js  sitecustomize_inject.pth  tenda_device_audit.py  tpm_symmetric_cipher.py  wvr30_admin_provisioning.py  xrechnung_visualizer.py
scanner/: cli.py  doctor.py  engine.py  install.py  placeholder_filter.py  repo_scanner.py  runners.py  sanitizer.py  sarif.py
search/: search_index.json
shared/types/: __init__.py  analysis.py  enums.py  extractions.py  label.py  meta.py  preprocessing.py  triage.py  verdict.py
shared/utils/: __init__.py  hashing.py  json_recovery.py  logging.py  policy.py  schema.py  scoring.py  tokens.py
tests/: conftest.py
tests/integration/: test_dast_107_litellm.py  test_inference_anthropic_smoke.py  test_inference_gemini_smoke.py  test_mcp_enumerate_e2e.py  test_mcp_scan_e2e.py  test_phase1_oracle.py  test_runners_opus_smoke.py  test_runners_sonnet_smoke.py  test_runners_triage_smoke.py
tests/unit/: test_adapter_thinking.py  test_adversarial_loop.py  test_adversarial_loop_runner.py  test_bench.py  (+71 more)
tools/: extract_zero_days.py
(+44 files in other folders)
