[project]
name = "argus-ai-scanner"
version = "1.2.1"
description = "AI-native code security scanner with cascade analysis and Firecracker-microVM DAST runtime validation"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "David Shochat", email = "davidsho1131@gmail.com" },
]
keywords = [
    "security",
    "static-analysis",
    "dast",
    "code-scanner",
    "vulnerability-scanner",
    "anthropic",
    "claude",
    "ai-security",
    "supply-chain-security",
    "prompt-injection",
    "sarif",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "httpx>=0.27.0",
    "pathspec>=0.12.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "structlog>=24.4.0",
    "tiktoken>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/dshochat/Argus_Scanner"
Documentation = "https://github.com/dshochat/Argus_Scanner#readme"
Repository = "https://github.com/dshochat/Argus_Scanner"
Issues = "https://github.com/dshochat/Argus_Scanner/issues"
Changelog = "https://github.com/dshochat/Argus_Scanner/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "respx>=0.21.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
argus = "scanner.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: requires external services (Anthropic, Gemini, Fly)",
    "slow: long-running tests (real model calls)",
]
asyncio_mode = "strict"
filterwarnings = [
    # pathspec 1.x's recommended replacement (GitIgnoreSpecPattern) isn't
    # exported in our pinned version. Revisit when pathspec ships it.
    "ignore::DeprecationWarning:pathspec",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    # Deliberately-malicious test fixtures. Linting them defeats their
    # purpose; the bad-code patterns in here are the point.
    "samples/regression_v1",
]

[tool.ruff.lint]
# v1.1 baseline: focus on real-bug rules. Stylistic rules (naming/N,
# pyupgrade/UP, simplify/SIM, type-checking-blocks/TCH) are deferred to
# v1.2 cleanup so we don't bikeshed the launch on lifted code style.
select = ["E", "F", "W", "I", "B"]
ignore = [
    # Long lines in lifted modules + test fixtures aren't a defect; the
    # formatter handles new code. Revisit case-by-case when tightening.
    "E501",
    # Imports inside if-blocks are intentional in a few places (lazy /
    # conditional import to avoid circular deps).
    "E402",
]

[tool.mypy]
strict = true
python_version = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "adjudicator",
    "analysis",
    "dast",
    "inference",
    "methodology",
    "preprocessing",
    "prompts",
    "scanner",
    "shared",
]

[tool.hatch.build.targets.sdist]
include = [
    "/adjudicator",
    "/analysis",
    "/dast",
    "/inference",
    "/methodology",
    "/preprocessing",
    "/prompts",
    "/scanner",
    "/shared",
    "/tests",
    "/docs",
    "/samples/regression_v1",
    "LICENSE",
    "README.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "pyproject.toml",
    "uv.lock",
]
exclude = [
    "/bench_results",
    "/site",
    "*.pyc",
    "__pycache__",
    ".env*",
    "tasks.md",
    "roadmap.md",
    "CLAUDE.md",
]
