[project]
name = "argus-ai-scanner"
version = "1.12.0"
description = "AI-native code security scanner: runtime sandbox-validated remediation. Confirm exploits, auto-patch, replay against the fix — all at machine scale."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "David Shochat", email = "davidsho1131@gmail.com" },
]
keywords = [
    "security",
    "static-analysis",
    "dast",
    "code-scanner",
    "vulnerability-scanner",
    "anthropic",
    "claude",
    "ai-security",
    "supply-chain-security",
    "prompt-injection",
    "sarif",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "httpx>=0.27.0",
    "jsonschema>=4.26.0",
    "pathspec>=0.12.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.0",
    "structlog>=24.4.0",
    "tiktoken>=0.7.0",
    # Web dashboard — bundled into the base install so `argus dashboard` works
    # out of the box (heavier: a web framework + async Postgres driver, but
    # always present). See dashboard/ and docs/dashboard.md.
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/dshochat/Argus_Scanner"
Documentation = "https://github.com/dshochat/Argus_Scanner#readme"
Repository = "https://github.com/dshochat/Argus_Scanner"
Issues = "https://github.com/dshochat/Argus_Scanner/issues"
Changelog = "https://github.com/dshochat/Argus_Scanner/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "respx>=0.21.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
# MCP scanning mode (v1.12). The official Python SDK is OPTIONAL —
# Argus ships a minimal JSON-RPC client that handles stdio +
# streamable-HTTP + SSE transports for full probe-injection control
# (the SDK validates schemas client-side which blocks adversarial
# input testing). The optional `mcp` package is listed here for
# users who also build / test MCP servers and want the canonical
# SDK in the same venv.
#
# Install with: pip install argus-ai-scanner[mcp]
mcp = [
    "mcp>=1.0.0",
]

# The dashboard's web/DB dependencies now live in the base install (above), so
# `argus dashboard` works out of the box. This empty extra is kept as a
# back-compat alias so `pip install argus-ai-scanner[dashboard]` still resolves.
dashboard = []

[project.scripts]
argus = "scanner.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: requires external services (Anthropic, Gemini, Fly)",
    "slow: long-running tests (real model calls)",
]
asyncio_mode = "strict"
filterwarnings = [
    # pathspec 1.x's recommended replacement (GitIgnoreSpecPattern) isn't
    # exported in our pinned version. Revisit when pathspec ships it.
    "ignore::DeprecationWarning:pathspec",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    # Deliberately-malicious test fixtures. Linting them defeats their
    # purpose; the bad-code patterns in here are the point.
    "samples/regression_v1",
]

[tool.ruff.lint]
# v1.1 baseline: focus on real-bug rules. Stylistic rules (naming/N,
# pyupgrade/UP, simplify/SIM, type-checking-blocks/TCH) are deferred to
# v1.2 cleanup so we don't bikeshed the launch on lifted code style.
select = ["E", "F", "W", "I", "B"]
ignore = [
    # Long lines in lifted modules + test fixtures aren't a defect; the
    # formatter handles new code. Revisit case-by-case when tightening.
    "E501",
    # Imports inside if-blocks are intentional in a few places (lazy /
    # conditional import to avoid circular deps).
    "E402",
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query() in argument defaults is the framework's
# documented dependency-injection idiom, not a mutable-default bug (B008).
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
strict = true
python_version = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "adjudicator",
    "analysis",
    "dashboard",
    "dast",
    "inference",
    "mcp_scanner",
    "methodology",
    "preprocessing",
    "prompts",
    "scanner",
    "shared",
]
# The frontend SOURCE is never shipped in the wheel (only the compiled SPA).
exclude = [
    "dashboard/frontend/**",
    "dashboard/**/node_modules/**",
]

# Force-include the compiled SPA. `force-include` is one of the only keys
# that overrides hatch's default VCS/gitignore-based exclusion, so the
# built assets ship even if a future .gitignore rule covers them.
[tool.hatch.build.targets.wheel.force-include]
"dashboard/server/static" = "dashboard/server/static"

[tool.hatch.build.targets.sdist]
include = [
    "/adjudicator",
    "/analysis",
    "/dashboard",
    "/dast",
    "/inference",
    "/mcp_scanner",
    "/methodology",
    "/preprocessing",
    "/prompts",
    "/scanner",
    "/shared",
    "/tests",
    "/docs",
    "/samples/regression_v1",
    "LICENSE",
    "README.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "pyproject.toml",
    "uv.lock",
]
exclude = [
    "/bench_results",
    "/site",
    "*.pyc",
    "__pycache__",
    ".env*",
    "tasks.md",
    "roadmap.md",
    "CLAUDE.md",
]
